--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             <div class="formulario__campo">
                 <label class="campo__etiqueta" for="cep">CEP</label>
                 <input name="cep" id="cep" class="campo__escrita" required />
+                <div id="erro" style="color: red; font-weight: bold;"></div>
             </div>
 
             <div class="formulario__campo">
